tests/agl/rejections/type/opacity_fn_interpolation.agl
render(1, style = true)
